# guilder

./: CHANGELOG.md  Cargo.toml  README.md  trading.yaml
abstraction/: CHANGELOG.md  README.md  trading.yaml
abstraction/codegen/: Cargo.toml  README.md
abstraction/codegen/src/: main.rs
client/guilder-client-binance/: Cargo.toml
client/guilder-client-binance/src/: client.rs  lib.rs
client/guilder-client-hyperliquid/: Cargo.toml
codegen/: Cargo.toml
codegen/src/: main.rs
core/: Cargo.toml  README.md
core/src/: currency_pair.rs  lib.rs  orderbook.rs
core/src/orderbook/: mod.rs
