[workspace]
resolver = "2"
members = [
    "core", # common trading components on top of guilder trait
    "abstraction/codegen", # codegen for guilder trait code
    "abstraction/target/rust", # guilder trait in rust
    "client/*", # implementation of guilder trait
]

[workspace.dependencies]
# serde
serde = { version = "1.0.209", features = ["derive"] }
serde_yaml = "0.9.34"
# rest api
reqwest = "0.12.7"
# concurrent hashmap
dashmap = "6.0.1"
# ordered f64
ordered-float = "4.2.2"
